--- a/Backend/package.json
+++ b/Backend/package.json
@@ -2,8 +2,9 @@
   "name": "hrms-backend",
   "type": "module",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.4",
     "express": "^4.19.2",
-    "mongoose": "^8.0.0",
-    "cors": "^2.8.5"
+    "mongoose": "^8.0.0"
   }
 }
