--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://bundelamk18_db_user:MyPass123@cluster0.yoqxkid.mongodb.net/hrms?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://bundelamk18_db_user:Mith@1234@cluster0.dyj8kur.mongodb.net/?appName=Cluster0?retryWrites=true&w=majority
 PORT=4500
